add delete method to the project
