# server/api/controllers/pet-management/router.ts
@@ -5,4 +5,5 @@ import controller from './controller';
 export default express
   .Router()
   .post('/', controller.create)
+  .delete('/delete/:id', controller.delete)
   .get('/:id', controller.byId);
